turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
  state= rule(state)(cou)(test)
                     ^